force-app/main/default/objects/Lead/fields/Assigned_Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Sales_Team__c</fullName>
    <description>Auto-set by F-03. Rev Ops can override. Informational field for reporting; OwnerId drives actual record routing.</description>
    <inlineHelpText>Sales team responsible for this lead. Auto-set by routing rules; Rev Ops can override. Drives reporting but does not change record ownership.</inlineHelpText>
    <label>Sales Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Thailand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>