force-app/main/default/objects/Lead/fields/Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range__c</fullName>
    <description>Annual budget range the prospect has allocated for this initiative. Used to qualify deal size before conversion.</description>
    <inlineHelpText>Prospect&apos;s annual budget allocated for this initiative (USD). Select the band that best matches what the contact has indicated.</inlineHelpText>
    <label>Budget Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under $50K</fullName>
            </value>
            <value>
                <fullName>$50K - $200K</fullName>
            </value>
            <value>
                <fullName>$200K - $500K</fullName>
            </value>
            <value>
                <fullName>$500K - $1M</fullName>
            </value>
            <value>
                <fullName>Over $1M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>