force-app/main/default/objects/Lead/fields/Capacity_Cabinets__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Cabinets__c</fullName>
    <description>Required for non-Platform leads where Product_Interest__c includes Space. Number of cabinets needed. VR-LEAD-03 enforces. Carries to Opportunity.Cabinets_Required__c on conversion.</description>
    <inlineHelpText>Number of colocation cabinets the prospect needs. Required when Product Interest includes Space. Carries to the Opportunity on conversion.</inlineHelpText>
    <label>Capacity (Cabinets)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>