force-app/main/default/objects/Lead/fields/Capacity_kW__c.field-meta.xml
<CustomField>
    <fullName>Capacity_kW__c</fullName>
    <description>Required when Customer_Type__c = Platform. The prospect&apos;s power requirement in kW. VR-LEAD-02 enforces. Carries to Opportunity.Power_kW__c on conversion.</description>
    <inlineHelpText>Prospect&apos;s total power requirement in kilowatts. Required for Platform (hyperscaler) leads. Carries to the Opportunity on conversion.</inlineHelpText>
    <label>Capacity (kVA)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>