force-app/main/default/objects/Lead/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Drives queue routing (Platform to Hyperscaler queue; Country to country queue). Carries to Opportunity.Customer_Type__c on conversion.</description>
    <inlineHelpText>Classification that drives queue routing - Platform routes to the Hyperscaler team, Country routes to the relevant country team.</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>