force-app/main/default/objects/Lead/fields/Disqualification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Notes__c</fullName>
    <description>Notes captured when a Lead is disqualified. Separate from general Notes to provide specific context for why a lead was not pursued.</description>
    <inlineHelpText>Explain why this lead was disqualified. This field is only visible when the lead status is Disqualified.</inlineHelpText>
    <label>Disqualification Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>