force-app/main/default/objects/Lead/fields/Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Reason__c</fullName>
    <description>Required when Status = Disqualified. VR-LEAD-01 enforces. Lead exits all active views once set.</description>
    <inlineHelpText>Required when Status is set to Disqualified. Select the primary reason this lead will not be converted to an opportunity.</inlineHelpText>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wrong Geography</fullName>
            </value>
            <value>
                <fullName>Wrong Fit</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Competitor Won</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Duplicate Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>