force-app/main/default/objects/Lead/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>Name of the event from which this lead was captured. Visible when Lead Source = Event.</description>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>