force-app/main/default/objects/Lead/fields/GoLive_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>GoLive_Target_Date__c</fullName>
    <description>Prospect&apos;s target service commencement date. Carries to Opportunity.GoLive_Target_Date__c on conversion. Used to pre-populate RDD on the first Quote.</description>
    <inlineHelpText>Date the prospect wants services to commence. Set based on what the contact has communicated. Carries to the Opportunity and pre-populates the first Quote RDD.</inlineHelpText>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>