force-app/main/default/objects/Lead/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <description>Used For leads sourced from 11x (Outbound - AI/BDR Outreach)</description>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>