force-app/main/default/objects/Lead/fields/Marketing_Channel__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Channel__c</fullName>
    <label>Marketing Channel</label>
    <length>150</length>
    <type>Text</type>
</CustomField>