force-app/main/default/objects/Lead/fields/Most_Recent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Campaign__c</fullName>
    <description>Used For leads sourced from 11x (Outbound - AI/BDR Outreach)</description>
    <label>Most Recent Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>