force-app/main/default/objects/Lead/fields/Positive_Replies__c.field-meta.xml
<CustomField>
    <fullName>Positive_Replies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For leads sourced from 11x (Outbound - AI/BDR Outreach)</description>
    <label>Positive Replies</label>
    <type>Checkbox</type>
</CustomField>