force-app/main/default/objects/Lead/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <description>Carries to Opportunity.Product_Interest__c on conversion. Must have at least one value selected before Sales Approved status.</description>
    <inlineHelpText>Select all Digital Edge products the prospect is interested in (colocation space, power, cross-connect, etc.). At least one value required before Sales Approved.</inlineHelpText>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Space</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Hyperscale</fullName>
            </value>
            <value>
                <fullName>Interconnect</fullName>
            </value>
            <value>
                <fullName>Colocation</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>