force-app/main/default/objects/Lead/fields/Strategic_Account_Flag__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flag if this is a strategic account requiring executive engagement. Carried to Account on conversion.</inlineHelpText>
    <label>Strategic Account</label>
    <type>Checkbox</type>
</CustomField>