force-app/main/default/objects/Lead/fields/Target_Country__c.field-meta.xml
<CustomField>
    <fullName>Target_Country__c</fullName>
    <description>Target country for this lead. Drives lead routing via F-03. On conversion, F-04 creates one Opportunity per selected value.</description>
    <inlineHelpText>APAC country or countries where the prospect wants services. One opportunity is created per country selected on conversion. Multi-select if deal spans multiple markets.</inlineHelpText>
    <label>Operation Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Thailand</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>