force-app/main/default/objects/Lead/validationRules/Block_Edits_When_Disqualified_Duplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Edits_When_Disqualified_Duplicate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status, &quot;Disqualified&quot;),
        ISPICKVAL(Status, &quot;Duplicate&quot;),
        ISPICKVAL(Status, &quot;Converted&quot;)
    ),
    NOT(ISCHANGED(Status)),
    NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>Disqualified/Duplicate records cannot be edited.</errorMessage>
</ValidationRule>