force-app/main/default/objects/Lead/validationRules/DE_Lead_Cannot_Reopen_Converted.validationRule-meta.xml
<ValidationRule>
    <fullName>DE_Lead_Cannot_Reopen_Converted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  IsConverted = TRUE,
  NOT(ISCHANGED(IsConverted)),
  ISCHANGED(Status)
)</errorConditionFormula>
    <errorMessage>A Converted lead cannot be reopened or have its status changed.</errorMessage>
</ValidationRule>