force-app/main/default/objects/Lead/validationRules/DE_Lead_Disqualification_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>DE_Lead_Disqualification_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status, &apos;Disqualified&apos;), ISBLANK(TEXT(Disqualification_Reason__c)))</errorConditionFormula>
    <errorDisplayField>Disqualification_Reason__c</errorDisplayField>
    <errorMessage>Disqualification Reason is required when Status = Disqualified.</errorMessage>
</ValidationRule>