force-app/main/default/objects/Lead/validationRules/DE_Lead_SalesApproved_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>DE_Lead_SalesApproved_Req</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &apos;Sales Approved&apos;),
  OR(
    ISBLANK(Target_Country__c),
    ISBLANK(TEXT(Customer_Type__c)),
    ISBLANK(Product_Interest__c)
  )
)</errorConditionFormula>
    <errorMessage>Operation Country, Account Type, and Product Interest are all required before marking this Lead as Sales Approved.</errorMessage>
</ValidationRule>