force-app/main/default/objects/Lead/validationRules/VR_LEAD_01_Disq_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_LEAD_01_Disq_Reason_Required</fullName>
    <active>true</active>
    <description>Requires Disqualification Reason when Status is set to Disqualified.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Disqualified&quot;),
  ISPICKVAL(Disqualification_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Disqualification_Reason__c</errorDisplayField>
    <errorMessage>You must select a Disqualification Reason before marking this Lead as Disqualified.</errorMessage>
</ValidationRule>