force-app/main/default/objects/Lead/validationRules/VR_LEAD_04_SalesApproved_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_LEAD_04_SalesApproved_Country</fullName>
    <active>true</active>
    <description>Operation Country must be selected before marking a Lead as Sales Approved.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &quot;Sales Approved&quot;),
  ISBLANK(Target_Country__c)
)</errorConditionFormula>
    <errorDisplayField>Target_Country__c</errorDisplayField>
    <errorMessage>Operation Country must be selected before marking this Lead as Sales Approved.</errorMessage>
</ValidationRule>