force-app/main/default/objects/Lead/validationRules/VR_LEAD_05_Referral_Partner_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_LEAD_05_Referral_Partner_Required</fullName>
    <active>true</active>
    <description>A Referral Partner account must be linked when Lead Source is Referral.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(LeadSource, &quot;Referral&quot;),
  ISBLANK(Referral_Partner__c)
)</errorConditionFormula>
    <errorDisplayField>Referral_Partner__c</errorDisplayField>
    <errorMessage>A Referral Partner account must be linked when Lead Source is Referral.</errorMessage>
</ValidationRule>