force-app/main/default/objects/Lead/validationRules/VR_LEAD_08_Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_LEAD_08_Email_Required</fullName>
    <active>true</active>
    <description>At least one contact method (Email, Phone, or Mobile) is required on all Leads. VR-LEAD-08.</description>
    <errorConditionFormula>AND(
  ISBLANK(Email),
  ISBLANK(Phone),
  ISBLANK(MobilePhone)
)</errorConditionFormula>
    <errorMessage>At least one contact method is required: Email, Phone, or Mobile. Please provide at least one.</errorMessage>
</ValidationRule>