force-app/main/default/objects/Lead/validationRules/VR_LEAD_09_Working_OperationCountry.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_LEAD_09_Working_OperationCountry</fullName>
    <active>false</active>
    <description>Operation Country is required before a Lead can be moved to Working. Allows Disqualified status without this field so reps can close unqualified inbound leads immediately.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &apos;Working&apos;),
  ISBLANK(Target_Country__c)
)</errorConditionFormula>
    <errorDisplayField>Target_Country__c</errorDisplayField>
    <errorMessage>Operation Country is required to move this Lead to Working status.</errorMessage>
</ValidationRule>