force-app/main/default/objects/Lead/validationRules/VR_LEAD_12_Working_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_LEAD_12_Working_Country</fullName>
    <active>false</active>
    <description>Country is required before a Lead can be moved to Working status.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &apos;Working&apos;),
  ISPICKVAL(CountryCode, &apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>CountryCode</errorDisplayField>
    <errorMessage>Country is required to move this Lead to Working status.</errorMessage>
</ValidationRule>