force-app/main/default/objects/Lead/listViews/DE_Lead_Indonesia_Lead.listView-meta.xml
<ListView>
    <fullName>DE_Lead_Indonesia_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>DE Lead - Indonesia</label>
    <queue>DE_Lead_Indonesia</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>