force-app/main/default/objects/Lead/listViews/DE_Lead_Japan_Lead.listView-meta.xml
<ListView>
    <fullName>DE_Lead_Japan_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <filterScope>Queue</filterScope>
    <label>DE Lead - Japan</label>
    <queue>DE_Lead_Japan</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>